# swaddle

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json
client/: eslint.config.js  index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AppShell.tsx  UI.tsx
client/src/lib/: api.ts
client/src/pages/: ConsultPage.tsx  DashboardPage.tsx  LibraryPage.tsx  PrescriptionsPage.tsx  ShopPage.tsx  SymptomCheckPage.tsx
server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json
server/alembic/: env.py
server/alembic/versions/: 20260721_0001_initial_models.py  20260721_0002_pending_review_status.py  20260721_0003_content_config.py
server/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
server/app/assistant/: __init__.py  constants.py  router.py  schemas.py  service.py
server/app/consultations/: __init__.py  router.py  schemas.py
server/app/content/: __init__.py  router.py
server/app/prescriptions/: __init__.py  auth.py  constants.py  ocr.py  router.py  schemas.py  service.py
server/app/products/: __init__.py  constants.py  router.py  schemas.py  service.py
server/scripts/: seed.py
server/tests/: conftest.py  test_consultations.py  test_content.py  test_health.py  test_prescriptions.py  test_product_recommendations.py  test_seed_data.py  test_symptom_check.py
shared/types/: __init__.py  index.ts  models.py  package.json
